syntax = "proto3";
package engine;
service engine {
  rpc AquireTask(TaskRequest) returns (Task);
  rpc CreateTask(Task) returns (Task);
  rpc AquireTaskReg(empty) returns (TaskRegistry);
  // rpc PublishTask(CompletedTask) returns (TaskStatus);
}
service auth {}

message empty {}

message TaskRegistry {
  repeated string tasks = 1; // namespace:task
}

message TaskRequest {
  string task_id = 1; // namespace:task
}
message Task {
  bytes task_payload = 1;
  string task_id = 2; // namespace:task
}
